--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,8 +6,9 @@
   height: 100%;
 
 
-  .content{
-    display: flex;
-    gap: 8px;
-  }
+  // .content{
+  //   display: flex;
+  //   flex-direction: column;
+  //   gap: 32px;
+  // }
 }
